Fix scroll overflow white space

--- a/convene-web/app/javascript/src/application.scss
+++ b/convene-web/app/javascript/src/application.scss
@@ -4,7 +4,7 @@ html {
   background-repeat: no-repeat;
   background-size: cover;
   width: 100%;
-  height: 100%;
+  min-height: 100%;
 }
 h2 {
   @apply text-xl font-medium text-neutral-900;
